--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+atomicwrites==1.4.0
 contourpy==1.3.2
 cycler==0.12.1
 et_xmlfile==2.0.0
@@ -7,16 +8,20 @@ kiwisolver==1.4.8
 matplotlib==3.10.3
 numpy==2.3.1
 openpyxl==3.1.5
-packaging==25.0
 pandas==2.3.0
+patsy==1.0.1
 pillow==11.2.1
+pyls-spyder==0.4.0
 pyparsing==3.2.3
-python-dateutil==2.9.0.post0
+PyQt5==5.15.10
+PyQtWebEngine==5.15.6
 pytz==2025.2
 scikit-learn==1.7.0
+scikit-posthocs==0.11.4
 scipy==1.16.0
+seaborn==0.13.2
 setuptools==78.1.1
-six==1.17.0
+statsmodels==0.14.4
 threadpoolctl==3.6.0
 tqdm==4.67.1
 tzdata==2025.2
